# proposals

./: README.md
intel-sds-proto/sds/: HACKING.rst  PKG-INFO  README.rst  openstack-common.conf  pylintrc  requirements.txt  run_tests.sh  setup.cfg  tox.ini
intel-sds-proto/sds/etc/sds/: policy.json  sds.conf.sample
intel-sds-proto/sds/rally-jobs/: README.rst
intel-sds-proto/sds/scripts/: sds-api.conf
intel-sds-proto/sds/sds/: __init__.py  context.py  i18n.py  manager.py  policy.py  service.py  version.py
intel-sds-proto/sds/sds.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
intel-sds-proto/sds/sds/api/: __init__.py  common.py  versions.py  xmlutil.py
intel-sds-proto/sds/sds/api/middleware/: auth.py  fault.py  sizelimit.py
intel-sds-proto/sds/sds/api/v1/: backend_capability_specs.py  backend_config_specs.py  backends.py  discover.py  pools.py  router.py  services.py  tier_capability_specs.py  tiers.py
intel-sds-proto/sds/sds/api/v1/views/: backends.py  pools.py  tiers.py
intel-sds-proto/sds/sds/common/: config.py  configuration.py  exception.py  flow_utils.py  rpc.py  sqlalchemyutils.py  ssh_utils.py  utils.py  wsgi.py
intel-sds-proto/sds/sds/compose/: __init__.py  api.py  cinder_client.py  iniwriter.py  storage_pools.py
intel-sds-proto/sds/sds/db/: __init__.py  api.py  base.py  migration.py
intel-sds-proto/sds/sds/db/sqlalchemy/: api.py  migration.py  models.py
intel-sds-proto/sds/sds/db/sqlalchemy/migrate_repo/: manage.py  migrate.cfg
intel-sds-proto/sds/sds/discover/: __init__.py  api.py  driver.py  storage_backends.py  storage_tiers.py
intel-sds-proto/sds/sds/discover/drivers/: ceph.py  swift.py
intel-sds-proto/sds/sds/hacking/: checks.py
intel-sds-proto/sds/sds/locale/: sds-log-critical.pot  sds-log-error.pot  sds-log-info.pot  sds-log-warning.pot  sds.pot
intel-sds-proto/sds/sds/locale/cs/LC_MESSAGES/: sds-log-error.po
intel-sds-proto/sds/sds/locale/de/LC_MESSAGES/: sds-log-error.po  sds-log-info.po
intel-sds-proto/sds/sds/locale/en_AU/LC_MESSAGES/: sds-log-error.po  sds-log-info.po
intel-sds-proto/sds/sds/locale/en_GB/LC_MESSAGES/: sds-log-critical.po  sds-log-error.po  sds-log-info.po  sds-log-warning.po
intel-sds-proto/sds/sds/locale/en_US/LC_MESSAGES/: sds.po
intel-sds-proto/sds/sds/locale/es/LC_MESSAGES/: sds-log-error.po  sds-log-info.po
intel-sds-proto/sds/sds/openstack/common/: eventlet_backdoor.py  excutils.py  fileutils.py  gettextutils.py  imageutils.py  importutils.py  jsonutils.py  lockutils.py  log.py  log_handler.py  loopingcall.py  network_utils.py  periodic_task.py  policy.py  processutils.py  service.py  sslutils.py  strutils.py  systemd.py  test.py  threadgroup.py  versionutils.py
intel-sds-proto/sds/tools/: enable-pre-commit-hook.sh  install_venv.py  lintstack.py
intel-sds-proto/sds/tools/config/: check_uptodate.sh  generate_sample.sh  oslo.config.generator.rc
(+199 files in other folders)
