[metadata]
name = sds
version = 2015.1
summary = OpenStack SDS Controller
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sds
scripts =
    bin/sds-all
    bin/sds-api
    bin/sds-manage

[entry_points]
sds.scheduler.filters =
    AvailabilityZoneFilter = sds.openstack.common.scheduler.filters.availability_zone_filter:AvailabilityZoneFilter
    CapabilitiesFilter = sds.openstack.common.scheduler.filters.capabilities_filter:CapabilitiesFilter
    CapacityFilter = sds.scheduler.filters.capacity_filter:CapacityFilter
    DifferentBackendFilter = sds.scheduler.filters.affinity_filter:DifferentBackendFilter
    JsonFilter = sds.openstack.common.scheduler.filters.json_filter:JsonFilter
    RetryFilter = sds.openstack.common.scheduler.filters.ignore_attempted_hosts_filter:IgnoreAttemptedHostsFilter
    SameBackendFilter = sds.scheduler.filters.affinity_filter:SameBackendFilter
sds.scheduler.weights =
    AllocatedCapacityWeigher = sds.scheduler.weights.capacity:AllocatedCapacityWeigher
    CapacityWeigher = sds.scheduler.weights.capacity:CapacityWeigher
    ChanceWeigher = sds.scheduler.weights.chance:ChanceWeigher
    VolumeNumberWeigher = sds.scheduler.weights.volume_number:VolumeNumberWeigher
console_scripts =
    sds-rootwrap = oslo.rootwrap.cmd:main
# These are for backwards compat with Havana notification_driver configuration values
oslo.messaging.notify.drivers =
    sds.openstack.common.notifier.log_notifier = oslo.messaging.notify._impl_log:LogDriver
    sds.openstack.common.notifier.no_op_notifier = oslo.messaging.notify._impl_noop:NoOpDriver
    sds.openstack.common.notifier.rpc_notifier2 = oslo.messaging.notify._impl_messaging:MessagingV2Driver
    sds.openstack.common.notifier.rpc_notifier = oslo.messaging.notify._impl_messaging:MessagingDriver
    sds.openstack.common.notifier.test_notifier = oslo.messaging.notify._impl_test:TestDriver

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = sds/locale
domain = sds

[update_catalog]
domain = sds
output_dir = sds/locale
input_file = sds/locale/sds.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sds/locale/sds.pot
